[project]
name = "cllib"
version = "0.2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
[[project.authors]]
name = "somebody"

[project.optional-dependencies]
gsheet = [
    'gspread~=5.10.0',
    'oauth2client~=4.1.3',
    'gspread-dataframe~=3.3.1',
    'gspread-formatting~=1.1.2',
]
xmlutil = [
    'lxml~=4.9',
]
selenium = [
    'selenium~=4.14',
]


[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"


